--- a/paper/markdown/figures_and_tables.Rmd
+++ b/paper/markdown/figures_and_tables.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Distinct smell and taste disorder phenotype of post-acute COVID-19 sequelae"
 subtitle: "Tables and figures"
-author: "HACT and CovILD study teams"
+author: "Distinct smell and taste disorder phenotype of post-acute COVID-19 sequelae"
 date: "`r format(Sys.time(), '%Y-%m-%d')`"
 
 output: 
@@ -33,7 +33,11 @@ header-includes:
 
 library(bookdown)
 
-knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, dev = "png", dpi = 600)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, 
+                      dev = "png", dpi = 600, 
+                      tab.cap.style = 'Table Heading')
+
+set_flextable_defaults(font.family = 'Cambria', font.size = 10)
 
 
 ```
@@ -42,7 +46,7 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, dev = "png
 
 # Tables
 
-```{r tab-hact, tab.cap = 'Baseline characteristic of the HACT study Austria (AT) and Italy (IT) cohorts.'}
+```{r tab-hact, tab.cap = 'Baseline characteristic of the Austria (AT) and Italy (IT) survey study cohorts.'}
 
 paper_tbl$hact_baseline %>% 
   flextable %>% 
@@ -51,12 +55,10 @@ paper_tbl$hact_baseline %>%
   width(4, width = 2.6, unit = 'cm') %>% 
   width(5, width = 2.2, unit = 'cm') %>% 
   footnote(1, 4:5, value = as_paragraph('Categorical variables: \u03C7\u00B2 test with Cramer V effect size statistic. Numeric variables: Mann-Whitney U test with wilcoxon r effect size statistic. P values corrected form multiple testing with Benjamini-Hochberg method.'), ref_symbols = 'a', part = 'header') %>% 
-  footnote(3, 1, value = as_paragraph('BMI: body mass index, overweight > 25 kg/m\u00B2, obesity > 30 kg/m\u00B2,'), ref_symbols = 'b', part = 'body') %>% 
+  footnote(3, 1, value = as_paragraph('BMI: body mass index, overweight > 25 kg/m\u00B2, obesity > 30 kg/m\u00B2.'), ref_symbols = 'b', part = 'body') %>% 
   footnote(15, 1, value = as_paragraph('Frequent respiratory infections, > 2 per year.'), ref_symbols = 'c', part = 'body') %>% 
   footnote(16, 1, value = as_paragraph('Frequent bacterial infections with antibiotic therapy, > 2 per year.'), ref_symbols = 'd', part = 'body') %>% 
-  theme_vanilla %>%
-  font(part = 'all', fontname = 'Cambria') %>% 
-  fontsize(size = 10, part = 'all')
+  theme_vanilla
 
 ```
 
@@ -72,9 +74,7 @@ paper_tbl$covild_baseline %>%
   width(7, width = 2.2, unit = 'cm') %>% 
   footnote(1, 6:7, value = as_paragraph('Comparison of ambulatory, moderate and severe COVID-19 individuals. Categorical variables: \u03C7\u00B2 test with Cramer V effect size statistic. Numeric variables: Kruskal-Wallis test with \u03B7\u00B2 effect size statistic. P values corrected form multiple testing with Benjamini-Hochberg method.'), ref_symbols = 'a', part = 'header') %>% 
   footnote(3, 1, value = as_paragraph('BMI: body mass index, overweight > 25 kg/m\u00B2, obesity > 30 kg/m\u00B2,'), ref_symbols = 'b', part = 'body') %>% 
-  theme_vanilla %>%
-  font(part = 'all', fontname = 'Cambria') %>% 
-  fontsize(size = 10, part = 'all')
+  theme_vanilla
 
 ```
 
@@ -82,93 +82,67 @@ paper_tbl$covild_baseline %>%
 
 # Figures {#sec:figures}
 
-```{r fig-consort, fig.width = mm_inch(figures$consort$w), fig.height = mm_inch(figures$consort$h), fig.cap = 'Flow diagram of the analysis inclusion process for the CovILD and HACT studies.'}
+```{r fig-consort, fig.width = mm_inch(figures$consort$w), fig.height = mm_inch(figures$consort$h), fig.cap = 'Flow diagram of the analysis inclusion process for the longitudinal CovILD cohort and the Health after COVID-19 survey study.'}
 
 figures$consort$plot
 
 ```
 
-__Figure \@ref(fig:fig-consort). Flow diagram of the analysis inclusion process for the CovILD and HACT studies..__
+__Figure \@ref(fig:fig-consort). Flow diagram of the analysis inclusion process for the longitudinal CovILD cohort and the Health after COVID-19 survey study.__
 
 \newpage
 
-```{r fig-sympt-recovery, fig.width = mm_inch(figures$sympt_recovery$w), fig.height = mm_inch(figures$sympt_recovery$h), fig.cap = 'Symptom-specific recovery times in ambulatory COVID-19.'}
+```{r fig-sympt-recovery, fig.width = mm_inch(figures$sympt_recovery$w), fig.height = mm_inch(figures$sympt_recovery$h), fig.cap = 'Symptom-specific recovery times in ambulatory COVID-19 survey study.'}
 
 figures$sympt_recovery$plot
 
 ```
 
-__Figure \@ref(fig:fig-sympt-recovery). Symptom-specific recovery times in ambulatory COVID-19.__
+__Figure \@ref(fig:fig-sympt-recovery). Symptom-specific recovery times in ambulatory COVID-19 survey study.__
 
-Symptom-specific recovery times were calculated for each participants of the HACT study cohorts (Austria: AT, Italy: IT).
+_Symptom-specific recovery times were calculated for each participants of the survey study cohorts (Austria: AT, Italy: IT)._
 
-__(A)__ Distribution of the recovery times in the individuals with the indicated symptoms present during acute COVID-19. Diamonds represent median recovery times, tinted ellipses code for interquartile ranges. Numbers of complete observations are indicated in the plot captions.
+_(A) Distribution of the recovery times in the individuals with the indicated symptoms present during acute COVID-19 (first 14 days after clinical onset). Diamonds represent median recovery times, tinted ellipses code for interquartile ranges. Numbers of complete observations are indicated in the plot captions._
 
-__(B)__ Percentages of individuals with smell and taste disorders in the AT (Austria) and IT (Italy) HACT study cohorts at particular time points after clinical onset. Numbers of complete observations are indicated under the plots.
+_(B) Percentages of individuals with smell and taste disorders in the AT (Austria) and IT (Italy) survey study cohorts at particular time points after clinical onset. Numbers of complete observations are indicated under the plots._
 
 \newpage
 
-```{r fig-sympt-mds, fig.width = mm_inch(figures$sympt_mds$w), fig.height = mm_inch(figures$sympt_mds$h), fig.cap = 'Self-reported smell and taste disorders are isolated symptoms of long COVID and PASC.'}
+```{r fig-sympt-mds, fig.width = mm_inch(figures$sympt_mds$w), fig.height = mm_inch(figures$sympt_mds$h), fig.cap = 'Self-reported smell and taste disorders are isolated persistent symptoms of COVID-19.'}
 
 figures$sympt_mds$plot
 
 ```
 
-__Figure \@ref(fig:fig-sympt-mds). Self-reported smell and taste disorders are isolated symptoms of long COVID and PASC.__
+__Figure \@ref(fig:fig-sympt-mds). Self-reported smell and taste disorders are isolated persistent symptoms of COVID-19.__
 
-Binary symptom occurrence data during for long COVID ($\geq$ 28 days after clinical onset, __A__) and PASC ($\geq$ 90 days, __B__) in the HACT Austria (AT) and Italy (IT) cohorts were subjected to two-dimensional multi-dimensional scaling (MDS) with simple matching distance (SMD) between the symptoms. MDS coordinates are presented in point plots. Selected data points are labeled with the symptom names. Percentages of the data set variance associated with the MDS dimensions are indicated in the plot axes. Numbers of complete observations are indicated under the plots.
+_Symptom data during at $\geq$ 28 days (A) and $\geq$ 3 moths (B) after clinical onset in the Austria (AT) and Italy (IT) survey study cohorts were subjected to two-dimensional multi-dimensional scaling (MDS) with simple matching distance (SMD) between the symptoms. MDS coordinates are presented in point plots. Selected data points are labeled with the symptom names. Percentages of the data set variance associated with the MDS dimensions are indicated in the plot axes. Numbers of complete observations are indicated under the plots._
 
 \newpage
 
-```{r fig-apriori, fig.width = mm_inch(figures$apriori$w), fig.height = mm_inch(figures$apriori$h), fig.cap = 'Frequent co-occurrence of smell and taste disorders in long COVID and PASC.'}
+```{r fig-apriori, fig.width = mm_inch(figures$apriori$w), fig.height = mm_inch(figures$apriori$h), fig.cap = 'Co-occurrence of smell and taste disorders in post-acute COVID-19 sequelae.'}
 
 figures$apriori$plot
 
 ```
 
-__Figure \@ref(fig:fig-apriori). Frequent co-occurrence of smell and taste disorders in long COVID and PASC.__
+__Figure \@ref(fig:fig-apriori). Co-occurrence of smell and taste disorders in post-acute COVID-19 sequelae.__
 
-Frequent combinations of symptoms of long COVID (__A__) and PASC (__B__) in the HACT study Austria (AT) and Italy (IT) cohorts were identified with the apriori algorithm. Symptom combination support and confidence are presented in the plots. Point color codes for lift values. The hypo/anosmia and hypo/ageusia combinations are labeled.
-
-\newpage
-
-```{r fig-clustering, fig.width = mm_inch(figures$clustering$w), fig.height = mm_inch(figures$clustering$h), fig.cap = 'Clustering of ambulatory COVID-19 individuals by symptom-specific recovery times.'}
-
-figures$clustering$plot
-
-```
-
-__Figure \@ref(fig:fig-clustering). Clustering of ambulatory COVID-19 individuals by symptom-specific recovery times.__
-
-Individuals of the training Austria (AT) cohort of the HACT study were subjected to clustering in respect to symptom-specific recovery times with the PAM (partitioning around medoids) algorithm and Euclidean distance measure (__Supplementary Figure S8__). Cluster assignment in the test Italy (IT) HACT cohort was done with k-NN label propagation algorithm. Recovery times for particular COVID-19 symptoms in the COVID-19 recovery clusters are presented as heat maps. Numbers of individuals assigned to the recovery clusters are indicated under the plots.
-
-Dim. appetite: diminished appetite, Imp. concentration: impaired concentration, Imp. walk: impaired walk, Imp. FMS: impaired fine motor skills.
+_Frequent combinations of symptoms at $\geq$ 28 days (A) and $\geq$ 3 months (B) after clinical onset in the Austria (AT) and Italy (IT) survey study cohorts were identified with the apriori algorithm. Symptom combination support and confidence are presented in the plots. Point color codes for lift statistic values. The hypo/anosmia and hypo/ageusia combinations are labeled._
 
 \newpage
 
-```{r fig-sympt-clusters, fig.width = mm_inch(figures$sympt_clusters$w), fig.height = mm_inch(figures$sympt_clusters$h), fig.cap = 'Duration of neurocognitive and respiratory symptoms, fatigue, smell and taste disorders differs between the COVID-19 recovery clusters.'}
+```{r fig-sympt-clusters, fig.width = mm_inch(figures$sympt_clusters$w), fig.height = mm_inch(figures$sympt_clusters$h), fig.cap = 'Differing duration of neurocognitive and respiratory symptoms, fatigue, smell and taste disorders defines the COVID-19 recovery clusters.'}
 
 figures$sympt_clusters$plot
 
 ```
 
-__Figure \@ref(fig:fig-sympt-clusters). Duration of neurocognitive and respiratory symptoms, fatigue, smell and taste disorders differs between the COVID-19 recovery clusters.__
+__Figure \@ref(fig:fig-sympt-clusters). Differing duration of neurocognitive and respiratory symptoms, fatigue, smell and taste disorders defines the COVID-19 recovery clusters.__
 
-Semi-supervised clustering was performed as presented in __Figure \@ref(fig:fig-clustering)__ and __Supplementary Figure S8__. Mean recovery times in the recovery clusters are presented as lines, 2 $\times$ SEM intervals are displayed as tinted regions.  Numbers of individuals assigned to the recovery clusters are indicated under the plots.
+_The smell and taste disorder recovery (STDR), rapid recovery (RR) and slow recovery (SR) clusters of the survey study participants were identified by semi supervised PAM clustering (partitioning around medoids, Euclidean distance, training cohort: Austria [AT], test cohort: Italy [IT]). Mean recovery times in the recovery clusters are presented as lines, 2 $\times$ SEM intervals are displayed as tinted regions. Numbers of individuals assigned to the recovery clusters are indicated under the plots._
 
-Dim. appetite: diminished appetite, Imp. concentration: impaired concentration, Imp. walk: impaired walk, Imp. FMS: impaired fine motor skills.
-
-\newpage
-
-```{r fig-base-clusters, fig.width = mm_inch(figures$base_clusters$w), fig.height = mm_inch(figures$base_clusters$h), fig.cap = 'COVID-19 recovery clusters differ in sex distribution, comorbidity and daily medication rates.'}
-
-figures$base_clusters$plot
-
-```
-
-__Figure \@ref(fig:fig-base-clusters). COVID-19 recovery clusters differ in sex distribution, comorbidity and daily medication rates.__
-
-Differences in sex distribution (__A__), frequency of comorbidity (__B__) and daily medication (__C__) between the recovery clusters in the training Austria (AT) and the test Italy (IT) HACT study cohorts (__Figure \@ref(fig:fig-clustering)__, __Supplementary Figure S8__) were assessed by $\chi^2$ test with Cramer V effect size statistic. P values were corrected for multiple testing with Benjamini-Hochberg method. The frequencies are presented as bar plots. Effect size statistics and p values are indicated in the plot caption. Numbers of complete observations are displayed under the plots.
+_Dim. appetite: diminished appetite, Imp. concentration: impaired concentration, Imp. walk: impaired walk, Imp. FMS: impaired fine motor skills._
 
 \newpage
 
@@ -180,6 +154,6 @@ figures$recovery_clusters$plot
 
 __Figure \@ref(fig:fig-recovery-clusters). Good clinical and mental health status and quality of life at the survey completion in individuals with persistent smell and taste disorders.__
 
-Differences in minimum/maximum scaled readouts of clinical and physical recovery, mental health and quality of life scoring at the time of survey completion in the recovery clusters (__Figure \@ref(fig:fig-clustering)__, __Supplementary Figure S8__) are presented in radial plots. Yes/no items (incomplete convalescence, weight loss, new medication and need for rehabilitation) were binarized (yes: 1, no: 0) prior to visualization. Lines represent mean values, 2 $\times$ SEM intervals are displayed as tinted regions. Numbers of individuals assigned to the recovery clusters are indicated under the plots.
+_Differences in minimum/maximum scaled readouts of clinical and physical recovery, mental health and quality of life at the time of survey completion in the recovery clusters (STDR: smell and taste disorder recovery, RR: rapid recovery, SR: slow recovery) in the Austria (AT) and Italy (IT) survey study cohorts. Dichotomous items (incomplete convalescence, weight loss, new medication and need for rehabilitation) were binarized (yes: 1, no: 0) prior to visualization. Statistical significance for differences between the clusters was assessed by Kruskal-Wallis (numeric readouts) or $\chi^2$ test (dichotomous readouts). P values were corrected for multiple testing with Benjamini-Hochberg method. Lines represent mean values, 2 $\times$ SEM intervals are displayed as tinted regions. Numbers of individuals assigned to the recovery clusters are indicated under the plots._
 
-incomplete recovery: self-reported incomplete recovery, # persist. symptoms: number of long COVID symptoms ($\geq$ 28 days after clinical onset), phys. performance loss: physical performance loss as compared with the time before COVID-19, QoL score: quality of life impairment score, OMH score: overall mental health impairment score, ANX score: anxiety score, DPR: depression score.
+_incomplete recovery: self-reported incomplete recovery, # persist. symptoms: number of symptoms at $\geq$ 28 days after clinical onset, phys. performance loss: physical performance loss as compared with the time before COVID-19, QoL score: quality of life impairment score, OMH score: overall mental health impairment score, ANX score: anxiety score, DPR: depression score._
